# rm_os

./: Cargo.toml  x86_64-rm_os.json
.cargo/: config.toml
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buf.rs  vga_buffer.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
tests/: heap_allocation.rs  interrupts.rs  should_panic.rs  stack_overflow.rs  vga_buf.rs
