[package]
name = "rm_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.24"  # can't use latest version, must use 0.9 version
volatile = "0.2.6"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
spin = "0.5.2"

# NOTE: Don't need to specify the panic behavior here, because it has been specified in `./x86_64-rm_os.json`
# [profile.dev]
# panic = "abort"

# [profile.release]
# panic = "abort"
